tests/fail/lock-out-of-order.stderr
error[E0277]: the trait bound `FirstLock: LockAfter<SecondLock>` is not satisfied
  --> tests/fail/lock-out-of-order.rs:40:34
   |
40 |     let mut first_guard = locked.lock::<FirstLock>(&first);
   |                                  ^^^^ the trait `LockAfter<SecondLock>` is not implemented for `FirstLock`
   |
   = help: the trait `LockAfter<Unlocked>` is implemented for `FirstLock`
   = help: for that trait implementation, expected `Unlocked`, found `SecondLock`
note: required by a bound in `LockedAt::<'_, L>::lock`
  --> src/lockedat.rs
   |
   |     pub fn lock<'a, NewLock: LockAfter<L> + 'a + MutexLockLevel>(
   |                              ^^^^^^^^^^^^ required by this bound in `LockedAt::<'_, L>::lock`
